--- a/gripnex.html
+++ b/gripnex.html
@@ -1,1 +1,161 @@
-///dsadsa///
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GripNex | Performance Grip Socks</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+</head>
+<body>
+  <div class="educational-banner" role="alert" id="edu-banner">
+    <span>This site is for educational purposes only and is not an operational business.</span>
+    <button class="educational-banner__close" id="edu-banner-close" aria-label="Dismiss notice">×</button>
+  </div>
+
+  <header id="home" class="hero">
+    <div class="hero__top">
+      <div class="brand">GripNex</div>
+      <nav class="nav">
+        <a href="#home">Home</a>
+        <a href="#value">Our Story</a>
+        <a href="#how">How it works</a>
+        <a href="#differentiation">Differentiation</a>
+        <a href="#credibility">Credibility</a>
+        <a href="#cta">Contact</a>
+      </nav>
+    </div>
+    <div class="hero__body">
+      <div class="hero__text">
+        <p class="eyebrow">Advanced-grip athletic socks</p>
+        <h1>Stay locked in. Move faster. Play safer.</h1>
+        <p class="lede">GripNex delivers advanced-grip athletic socks designed to keep your feet locked in place, so you can move faster, play safer, and perform with confidence. Made for athletes who demand stability, comfort, and real performance.</p>
+        <div class="cta-group">
+          <a class="btn btn-primary" href="#cta">Shop GripNex</a>
+        </div>
+      </div>
+      <div class="hero__visual" aria-hidden="true">
+        <img src="gripnex-logo.svg" alt="GripNex logo">
+      </div>
+    </div>
+  </header>
+
+  <main>
+    <section id="value" class="section">
+      <div class="section__heading">
+        <p class="eyebrow">Value proposition</p>
+        <h2>Engineered grip for real athletes</h2>
+        <p class="section__lede">GripNex delivers advanced-grip athletic socks designed to keep your feet locked in place, so you can move faster, play safer, and perform with confidence.</p>
+      </div>
+      <div class="two-col">
+        <div class="card">
+          <h3>What sets us apart</h3>
+          <p>We listened to athlete feedback and built socks that stay put through sprints, cuts, and full matches. Every pair balances traction, cushioning, and breathability.</p>
+        </div>
+        <div class="card card--accent">
+          <p class="card__eyebrow">CTA #2</p>
+          <h3>See how GripNex improves your performance.</h3>
+          <p>Explore the traction technology that keeps your feet locked in when the game gets intense.</p>
+          <a class="btn btn-secondary" href="#how">How It Works</a>
+        </div>
+      </div>
+    </section>
+
+    <section id="how" class="section section--muted">
+      <div class="section__heading">
+        <p class="eyebrow">How it works</p>
+        <h2>Performance you can feel in three steps</h2>
+      </div>
+      <div class="steps">
+        <div class="step">
+          <div class="step__number">1</div>
+          <div>
+            <h3>Lock-in grip pattern</h3>
+            <p>Strategic anti-slip rubber keeps your foot from sliding inside your shoe during explosive moves.</p>
+          </div>
+        </div>
+        <div class="step">
+          <div class="step__number">2</div>
+          <div>
+            <h3>Balanced support</h3>
+            <p>Targeted compression and breathable cushioning stabilize your ankle without trapping heat.</p>
+          </div>
+        </div>
+        <div class="step">
+          <div class="step__number">3</div>
+          <div>
+            <h3>Built for competition</h3>
+            <p>Tested with collegiate athletes in full-speed sessions to ensure durability and comfort.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="differentiation" class="section">
+      <div class="section__heading">
+        <p class="eyebrow">Differentiation</p>
+        <h2>Designed to protect every cut and sprint</h2>
+        <p class="section__lede">Unlike regular grip socks, GripNex uses a strategic anti-slip rubber pattern that prevents sliding inside your shoe, reduces ankle rolls, and minimizes blisters. Our design is engineered for real athletic performance—not just comfort.</p>
+      </div>
+      <div class="card-grid">
+        <div class="card">
+          <h3>Stay planted</h3>
+          <p>Rubber traction zones map to high-slip areas, helping you hold position when you accelerate or stop on a dime.</p>
+        </div>
+        <div class="card">
+          <h3>Protect your ankles</h3>
+          <p>Stability-focused compression hugs the ankle to reduce rolls while maintaining full range of motion.</p>
+        </div>
+        <div class="card">
+          <h3>Fight friction</h3>
+          <p>Smooth interior knit and breathable fibers cut down on hot spots and blisters during long sessions.</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="credibility" class="section section--muted">
+      <div class="section__heading">
+        <p class="eyebrow">Credibility</p>
+        <h2>Validated by athletes</h2>
+        <p class="section__lede">GripNex was developed from real athlete feedback and tested in competitive training sessions at the collegiate level. Our product design is based on performance testing, movement analysis, and player experience—ensuring reliable grip and durability.</p>
+      </div>
+      <div class="two-col">
+        <div class="card">
+          <h3>Feedback-driven design</h3>
+          <p>We prototype with athletes, collect movement data, and refine traction patterns to match how players actually cut, jump, and pivot.</p>
+        </div>
+        <div class="card">
+          <h3>Game-ready durability</h3>
+          <p>Reinforced yarns and abrasion-resistant grips stand up to repeated high-intensity sessions without peeling or wearing out.</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="cta" class="section">
+      <div class="cta-final">
+        <p class="eyebrow">CTA #3</p>
+        <h2>Join our launch list and get early access + athlete discounts.</h2>
+        <p class="section__lede">Be first in line for drop announcements, performance updates, and exclusive pricing for early supporters.</p>
+        <a class="btn btn-primary" href="#">Join the List</a>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <p>© 2024 GripNex. Built for athletes.</p>
+  </footer>
+
+  <script>
+    const eduBanner = document.getElementById('edu-banner');
+    const eduBannerClose = document.getElementById('edu-banner-close');
+
+    if (eduBanner && eduBannerClose) {
+      eduBannerClose.addEventListener('click', () => {
+        eduBanner.remove();
+      });
+    }
+  </script>
+</body>
+</html>
