--- a/gripnex.html
+++ b/gripnex.html
@@ -37,7 +37,7 @@
         </div>
       </div>
       <div class="hero__visual" aria-hidden="true">
-        <img src="gripnex-logo.svg" alt="GripNex logo">
+        <img src="Gripnex logo.jpg" alt="GripNex logo">
       </div>
     </div>
   </header>
