--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="#how">How it works</a>
         <a href="#differentiation">Differentiation</a>
         <a href="#credibility">Credibility</a>
-        <a href="#cta">Contact</a>
+        <a href="contact/">Contact</a>
       </nav>
     </div>
     <div class="hero__body">
@@ -34,6 +34,7 @@
         <p class="lede">GripNex delivers advanced-grip athletic socks designed to keep your feet locked in place, so you can move faster, play safer, and perform with confidence. Made for athletes who demand stability, comfort, and real performance.</p>
         <div class="cta-group">
           <a class="btn btn-primary" href="#cta">Shop GripNex</a>
+          <a class="btn btn-secondary" href="contact/">Talk with us</a>
         </div>
       </div>
       <div class="hero__visual" aria-hidden="true">
