Update founder image path and copyright year

--- a/about.html
+++ b/about.html
@@ -25,9 +25,6 @@
         <h1>GripNex exists to keep athletes stable and confident.</h1>
         <p class="lede">Learn how our story, mission, and vision shape the performance grip socks that help athletes move with control.</p>
       </div>
-      <div class="hero__visual hero__visual--portrait" aria-hidden="true">
-        <img src="founder.jpg" alt="Portrait of Roland Rieder Amarilla, founder of GripNex">
-      </div>
     </div>
   </header>
 
@@ -80,7 +77,7 @@
     <section class="section about-founder">
       <div class="two-col two-col--balanced two-col--reversed">
         <div class="founder-photo">
-          <img src="founder.jpg" alt="Roland Rieder Amarilla, founder of GripNex" loading="lazy">
+          <img src="about/founder.jpg" alt="Roland Rieder Amarilla, founder of GripNex" loading="lazy">
         </div>
         <div>
           <p class="eyebrow">Meet the Founder</p>
@@ -92,7 +89,7 @@
   </main>
 
   <footer class="footer">
-    <p>© 2025 GripNex. Built for athletes.</p>
+    <p>© 2024 GripNex. Built for athletes.</p>
   </footer>
 
   <script>
