--- a/about.html
+++ b/about.html
@@ -77,7 +77,9 @@
     <section class="section about-founder">
       <div class="two-col two-col--balanced two-col--reversed">
         <div class="founder-photo">
-          <img src="about/founder.jpg" alt="Roland Rieder Amarilla, founder of GripNex" loading="lazy">
+          <img src="roland.jpg"
+               alt="Roland Rieder Amarilla"
+               loading="lazy">
         </div>
         <div>
           <p class="eyebrow">Meet the Founder</p>
@@ -89,7 +91,7 @@
   </main>
 
   <footer class="footer">
-    <p>© 2024 GripNex. Built for athletes.</p>
+    <p>© 2025 GripNex. Built for athletes.</p>
   </footer>
 
   <script>
